# Programare-C

./: README.md
Laborator 1/: average  average.c  dobanda  dobanda.c  hello  hello.c
Laborator 2/: 5.ARIA.c  6.Complex.c  7.LAST_2_Digits.c  8.ATM.c  9.Person_size.c
Proiect/: README.md  main.c
Proiect/Repository/: FinancialData.txt  fileRepository.c  fileRepository.h  transaction.c  transaction.h
Proiect/Services/: Reports.c  Reports.h  crud.c  crud.h
Proiect/Tests/: testService.c  testService.h
Proiect/Ui/: mainMenu.c  mainMenu.h
Proiect/Utility/: Utility.c  Utility.h
Proiect/Validator/: validator.c  validator.h
Proiect/Views/: transactionsView.c
Proiect2/: CMakeLists.txt  main.c
Proiect2/Data/: Accounts.csv  Transactions.csv  admin.csv
Proiect2/Login/: Login.c  Login.h
Proiect2/Repository/: accounts.c  accounts.h  fileRepository.c  fileRepository.h  transaction.c  transaction.h
Proiect2/Services/: Reports.c  Reports.h  crud.c  crud.h
Proiect2/Tests/: testService.c  testService.h
Proiect2/Ui/: mainMenu.c  mainMenu.h
Proiect2/Utility/: dynamic_allocation.c  dynamic_allocation.h  encryption.c  encryption.h
Proiect2/Validator/: validator.c  validator.h
Proiect2/Views/: transactionsView.c  transactionsView.h
Teorie/labs/: HW.c  first.c  read.c
